// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin index should render carusel inside plugin 1`] = `
<PluginWrapper
  disableCarusel={false}
  elements={
    Array [
      Object {
        "elements": Array [
          Object {
            "id": "Uk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "Ck4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "Ek4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "Nkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "NkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "EyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "Ek4tPy1h4",
        "type": "MENU",
      },
      Object {
        "elements": Array [
          Object {
            "id": "aUk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "aCk4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "aEk4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "aNkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "aNkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "aEyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "aEk4tPy1h5",
        "type": "MENU",
      },
      Object {
        "elements": Array [
          Object {
            "id": "bUk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "bCk4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "bEk4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "bNkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "bNkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "bEyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "bEk4tPy1h6",
        "type": "MENU",
      },
    ]
  }
  hideButtons={false}
  onClick={[Function]}
>
  <Carusel
    elements={
      Array [
        Object {
          "elements": Array [
            Object {
              "id": "Uk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "Ck4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "Ek4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "Nkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "NkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "EyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "Ek4tPy1h4",
          "type": "MENU",
        },
        Object {
          "elements": Array [
            Object {
              "id": "aUk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "aCk4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "aEk4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "aNkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "aNkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "aEyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "aEk4tPy1h5",
          "type": "MENU",
        },
        Object {
          "elements": Array [
            Object {
              "id": "bUk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "bCk4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "bEk4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "bNkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "bNkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "bEyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "bEk4tPy1h6",
          "type": "MENU",
        },
      ]
    }
    hideButtons={false}
    onClick={[Function]}
  >
    <div>
      <div>
        <div
          onMouseDown={[Function]}
        />
      </div>
      <div>
        <ResizeDetector
          handleHeight={false}
          handleWidth={false}
          onResize={[Function]}
          refreshRate={1000}
          resizableElementId=""
          skipOnMount={false}
        >
          <div
            style={
              Object {
                "display": "none",
                "height": 0,
                "position": "absolute",
                "visibility": "hidden",
                "width": 0,
              }
            }
          />
        </ResizeDetector>
        <CaruselItems
          elements={
            Array [
              Object {
                "elements": Array [
                  Object {
                    "id": "Uk4tPy1h2",
                    "type": "IMAGE",
                    "url": "https://picsum.photos/300/150",
                  },
                  Object {
                    "id": "Ck4tPy1h3",
                    "text": "Hello!",
                    "type": "TITLE",
                  },
                  Object {
                    "id": "Ek4tPy1h1",
                    "text": "Lorem Impsum...",
                    "type": "TEXT",
                  },
                  Object {
                    "id": "Nkm0hRAiE",
                    "postback": "click-on-button-1",
                    "text": "Click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "NkGJ6CAiN",
                    "postback": "click-on-button-2",
                    "text": "No click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "EyCyTRCi4",
                    "postback": "click-on-button-3",
                    "text": "Aww don\`t click on me",
                    "type": "BUTTON",
                  },
                ],
                "id": "Ek4tPy1h4",
                "type": "MENU",
              },
              Object {
                "elements": Array [
                  Object {
                    "id": "aUk4tPy1h2",
                    "type": "IMAGE",
                    "url": "https://picsum.photos/300/150",
                  },
                  Object {
                    "id": "aCk4tPy1h3",
                    "text": "Hello!",
                    "type": "TITLE",
                  },
                  Object {
                    "id": "aEk4tPy1h1",
                    "text": "Lorem Impsum...",
                    "type": "TEXT",
                  },
                  Object {
                    "id": "aNkm0hRAiE",
                    "postback": "click-on-button-1",
                    "text": "Click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "aNkGJ6CAiN",
                    "postback": "click-on-button-2",
                    "text": "No click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "aEyCyTRCi4",
                    "postback": "click-on-button-3",
                    "text": "Aww don\`t click on me",
                    "type": "BUTTON",
                  },
                ],
                "id": "aEk4tPy1h5",
                "type": "MENU",
              },
              Object {
                "elements": Array [
                  Object {
                    "id": "bUk4tPy1h2",
                    "type": "IMAGE",
                    "url": "https://picsum.photos/300/150",
                  },
                  Object {
                    "id": "bCk4tPy1h3",
                    "text": "Hello!",
                    "type": "TITLE",
                  },
                  Object {
                    "id": "bEk4tPy1h1",
                    "text": "Lorem Impsum...",
                    "type": "TEXT",
                  },
                  Object {
                    "id": "bNkm0hRAiE",
                    "postback": "click-on-button-1",
                    "text": "Click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "bNkGJ6CAiN",
                    "postback": "click-on-button-2",
                    "text": "No click me!",
                    "type": "BUTTON",
                  },
                  Object {
                    "id": "bEyCyTRCi4",
                    "postback": "click-on-button-3",
                    "text": "Aww don\`t click on me",
                    "type": "BUTTON",
                  },
                ],
                "id": "bEk4tPy1h6",
                "type": "MENU",
              },
            ]
          }
          handleChangeIndex={[Function]}
          hideButtons={false}
          index={0}
          onClick={[Function]}
        >
          <ReactSwipableView
            animateHeight={false}
            animateTransitions={true}
            axis="x"
            disableLazyLoading={false}
            disabled={false}
            enableMouseEvents={false}
            hysteresis={0.6}
            ignoreNativeScroll={false}
            index={0}
            onChangeIndex={[Function]}
            resistance={false}
            springConfig={
              Object {
                "delay": "0s",
                "duration": "0.35s",
                "easeFunction": "cubic-bezier(0.15, 0.3, 0.25, 1)",
              }
            }
            threshold={5}
          >
            <div
              onScroll={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "overflowX": "hidden",
                }
              }
            >
              <div
                className="react-swipeable-view-container"
                style={
                  Object {
                    "WebkitFlexDirection": "row",
                    "WebkitTransform": "translate(0%, 0)",
                    "WebkitTransition": "all 0s ease 0s",
                    "direction": "ltr",
                    "display": "flex",
                    "flexDirection": "row",
                    "height": null,
                    "transform": "translate(0%, 0)",
                    "transition": "all 0s ease 0s",
                    "willChange": "transform",
                  }
                }
              >
                <div
                  aria-hidden={false}
                  data-swipeable="true"
                  key=".$Ek4tPy1h4"
                  style={
                    Object {
                      "WebkitFlexShrink": 0,
                      "flexShrink": 0,
                      "overflow": "auto",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    key="Ek4tPy1h4"
                  >
                    <ComposedElement
                      elements={
                        Array [
                          Object {
                            "id": "Uk4tPy1h2",
                            "type": "IMAGE",
                            "url": "https://picsum.photos/300/150",
                          },
                          Object {
                            "id": "Ck4tPy1h3",
                            "text": "Hello!",
                            "type": "TITLE",
                          },
                          Object {
                            "id": "Ek4tPy1h1",
                            "text": "Lorem Impsum...",
                            "type": "TEXT",
                          },
                          Object {
                            "id": "Nkm0hRAiE",
                            "postback": "click-on-button-1",
                            "text": "Click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "NkGJ6CAiN",
                            "postback": "click-on-button-2",
                            "text": "No click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "EyCyTRCi4",
                            "postback": "click-on-button-3",
                            "text": "Aww don\`t click on me",
                            "type": "BUTTON",
                          },
                        ]
                      }
                      hideButtons={false}
                      onClick={[Function]}
                    >
                      <div>
                        <Element
                          id="Uk4tPy1h2"
                          key="Uk4tPy1h2"
                          topLevel={true}
                          type="IMAGE"
                          url="https://picsum.photos/300/150"
                        >
                          <Image
                            src="https://picsum.photos/300/150"
                          >
                            <div>
                              <div>
                                <img
                                  src="https://picsum.photos/300/150"
                                />
                              </div>
                            </div>
                          </Image>
                        </Element>
                        <Element
                          id="Ck4tPy1h3"
                          key="Ck4tPy1h3"
                          text="Hello!"
                          topLevel={true}
                          type="TITLE"
                        >
                          <Heading
                            content="Hello!"
                            level={1}
                          >
                            <h1>
                              Hello!
                            </h1>
                          </Heading>
                        </Element>
                        <Element
                          id="Ek4tPy1h1"
                          key="Ek4tPy1h1"
                          text="Lorem Impsum..."
                          topLevel={true}
                          type="TEXT"
                        >
                          <Text
                            content="Lorem Impsum..."
                          >
                            <p>
                              Lorem Impsum...
                            </p>
                          </Text>
                        </Element>
                        <Element
                          id="Nkm0hRAiE"
                          key="Nkm0hRAiE"
                          postback="click-on-button-1"
                          text="Click me!"
                          topLevel={true}
                          type="BUTTON"
                        >
                          <Button
                            id="Nkm0hRAiE"
                            label="Click me!"
                            postback="click-on-button-1"
                            text="Click me!"
                            topLevel={true}
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Click me!"
                              >
                                Click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          id="NkGJ6CAiN"
                          key="NkGJ6CAiN"
                          postback="click-on-button-2"
                          text="No click me!"
                          topLevel={true}
                          type="BUTTON"
                        >
                          <Button
                            id="NkGJ6CAiN"
                            label="No click me!"
                            postback="click-on-button-2"
                            text="No click me!"
                            topLevel={true}
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="No click me!"
                              >
                                No click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          id="EyCyTRCi4"
                          key="EyCyTRCi4"
                          postback="click-on-button-3"
                          text="Aww don\`t click on me"
                          topLevel={true}
                          type="BUTTON"
                        >
                          <Button
                            id="EyCyTRCi4"
                            label="Aww don\`t click on me"
                            postback="click-on-button-3"
                            text="Aww don\`t click on me"
                            topLevel={true}
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Aww don\`t click on me"
                              >
                                Aww don\`t click on me
                              </button>
                            </div>
                          </Button>
                        </Element>
                      </div>
                    </ComposedElement>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  data-swipeable="true"
                  key=".$aEk4tPy1h5"
                  style={
                    Object {
                      "WebkitFlexShrink": 0,
                      "flexShrink": 0,
                      "overflow": "auto",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    key="aEk4tPy1h5"
                  >
                    <ComposedElement
                      elements={
                        Array [
                          Object {
                            "id": "aUk4tPy1h2",
                            "type": "IMAGE",
                            "url": "https://picsum.photos/300/150",
                          },
                          Object {
                            "id": "aCk4tPy1h3",
                            "text": "Hello!",
                            "type": "TITLE",
                          },
                          Object {
                            "id": "aEk4tPy1h1",
                            "text": "Lorem Impsum...",
                            "type": "TEXT",
                          },
                          Object {
                            "id": "aNkm0hRAiE",
                            "postback": "click-on-button-1",
                            "text": "Click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "aNkGJ6CAiN",
                            "postback": "click-on-button-2",
                            "text": "No click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "aEyCyTRCi4",
                            "postback": "click-on-button-3",
                            "text": "Aww don\`t click on me",
                            "type": "BUTTON",
                          },
                        ]
                      }
                      hideButtons={false}
                      onClick={[Function]}
                    >
                      <div>
                        <Element
                          id="aUk4tPy1h2"
                          key="aUk4tPy1h2"
                          topLevel={true}
                          type="IMAGE"
                          url="https://picsum.photos/300/150"
                        >
                          <Image
                            src="https://picsum.photos/300/150"
                          >
                            <div>
                              <div>
                                <img
                                  src="https://picsum.photos/300/150"
                                />
                              </div>
                            </div>
                          </Image>
                        </Element>
                        <Element
                          id="aCk4tPy1h3"
                          key="aCk4tPy1h3"
                          text="Hello!"
                          topLevel={true}
                          type="TITLE"
                        >
                          <Heading
                            content="Hello!"
                            level={1}
                          >
                            <h1>
                              Hello!
                            </h1>
                          </Heading>
                        </Element>
                        <Element
                          id="aEk4tPy1h1"
                          key="aEk4tPy1h1"
                          text="Lorem Impsum..."
                          topLevel={true}
                          type="TEXT"
                        >
                          <Text
                            content="Lorem Impsum..."
                          >
                            <p>
                              Lorem Impsum...
                            </p>
                          </Text>
                        </Element>
                        <Element
                          id="aNkm0hRAiE"
                          key="aNkm0hRAiE"
                          postback="click-on-button-1"
                          text="Click me!"
                          topLevel={true}
                          type="BUTTON"
                        >
                          <Button
                            id="aNkm0hRAiE"
                            label="Click me!"
                            postback="click-on-button-1"
                            text="Click me!"
                            topLevel={true}
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Click me!"
                              >
                                Click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          id="aNkGJ6CAiN"
                          key="aNkGJ6CAiN"
                          postback="click-on-button-2"
                          text="No click me!"
                          topLevel={true}
                          type="BUTTON"
                        >
                          <Button
                            id="aNkGJ6CAiN"
                            label="No click me!"
                            postback="click-on-button-2"
                            text="No click me!"
                            topLevel={true}
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="No click me!"
                              >
                                No click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          id="aEyCyTRCi4"
                          key="aEyCyTRCi4"
                          postback="click-on-button-3"
                          text="Aww don\`t click on me"
                          topLevel={true}
                          type="BUTTON"
                        >
                          <Button
                            id="aEyCyTRCi4"
                            label="Aww don\`t click on me"
                            postback="click-on-button-3"
                            text="Aww don\`t click on me"
                            topLevel={true}
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Aww don\`t click on me"
                              >
                                Aww don\`t click on me
                              </button>
                            </div>
                          </Button>
                        </Element>
                      </div>
                    </ComposedElement>
                  </div>
                </div>
                <div
                  aria-hidden={true}
                  data-swipeable="true"
                  key=".$bEk4tPy1h6"
                  style={
                    Object {
                      "WebkitFlexShrink": 0,
                      "flexShrink": 0,
                      "overflow": "auto",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    key="bEk4tPy1h6"
                  >
                    <ComposedElement
                      elements={
                        Array [
                          Object {
                            "id": "bUk4tPy1h2",
                            "type": "IMAGE",
                            "url": "https://picsum.photos/300/150",
                          },
                          Object {
                            "id": "bCk4tPy1h3",
                            "text": "Hello!",
                            "type": "TITLE",
                          },
                          Object {
                            "id": "bEk4tPy1h1",
                            "text": "Lorem Impsum...",
                            "type": "TEXT",
                          },
                          Object {
                            "id": "bNkm0hRAiE",
                            "postback": "click-on-button-1",
                            "text": "Click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "bNkGJ6CAiN",
                            "postback": "click-on-button-2",
                            "text": "No click me!",
                            "type": "BUTTON",
                          },
                          Object {
                            "id": "bEyCyTRCi4",
                            "postback": "click-on-button-3",
                            "text": "Aww don\`t click on me",
                            "type": "BUTTON",
                          },
                        ]
                      }
                      hideButtons={false}
                      onClick={[Function]}
                    >
                      <div>
                        <Element
                          id="bUk4tPy1h2"
                          key="bUk4tPy1h2"
                          topLevel={true}
                          type="IMAGE"
                          url="https://picsum.photos/300/150"
                        >
                          <Image
                            src="https://picsum.photos/300/150"
                          >
                            <div>
                              <div>
                                <img
                                  src="https://picsum.photos/300/150"
                                />
                              </div>
                            </div>
                          </Image>
                        </Element>
                        <Element
                          id="bCk4tPy1h3"
                          key="bCk4tPy1h3"
                          text="Hello!"
                          topLevel={true}
                          type="TITLE"
                        >
                          <Heading
                            content="Hello!"
                            level={1}
                          >
                            <h1>
                              Hello!
                            </h1>
                          </Heading>
                        </Element>
                        <Element
                          id="bEk4tPy1h1"
                          key="bEk4tPy1h1"
                          text="Lorem Impsum..."
                          topLevel={true}
                          type="TEXT"
                        >
                          <Text
                            content="Lorem Impsum..."
                          >
                            <p>
                              Lorem Impsum...
                            </p>
                          </Text>
                        </Element>
                        <Element
                          id="bNkm0hRAiE"
                          key="bNkm0hRAiE"
                          postback="click-on-button-1"
                          text="Click me!"
                          topLevel={true}
                          type="BUTTON"
                        >
                          <Button
                            id="bNkm0hRAiE"
                            label="Click me!"
                            postback="click-on-button-1"
                            text="Click me!"
                            topLevel={true}
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Click me!"
                              >
                                Click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          id="bNkGJ6CAiN"
                          key="bNkGJ6CAiN"
                          postback="click-on-button-2"
                          text="No click me!"
                          topLevel={true}
                          type="BUTTON"
                        >
                          <Button
                            id="bNkGJ6CAiN"
                            label="No click me!"
                            postback="click-on-button-2"
                            text="No click me!"
                            topLevel={true}
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="No click me!"
                              >
                                No click me!
                              </button>
                            </div>
                          </Button>
                        </Element>
                        <Element
                          id="bEyCyTRCi4"
                          key="bEyCyTRCi4"
                          postback="click-on-button-3"
                          text="Aww don\`t click on me"
                          topLevel={true}
                          type="BUTTON"
                        >
                          <Button
                            id="bEyCyTRCi4"
                            label="Aww don\`t click on me"
                            postback="click-on-button-3"
                            text="Aww don\`t click on me"
                            topLevel={true}
                            type="BUTTON"
                          >
                            <div>
                              <button
                                onClick={[Function]}
                                title="Aww don\`t click on me"
                              >
                                Aww don\`t click on me
                              </button>
                            </div>
                          </Button>
                        </Element>
                      </div>
                    </ComposedElement>
                  </div>
                </div>
              </div>
            </div>
          </ReactSwipableView>
        </CaruselItems>
      </div>
      <div>
        <div
          onMouseDown={[Function]}
        />
      </div>
    </div>
  </Carusel>
</PluginWrapper>
`;

exports[`Plugin index should render gallery inside plugin 1`] = `
<PluginWrapper
  disableCarusel={true}
  elements={
    Array [
      Object {
        "elements": Array [
          Object {
            "id": "Uk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "Ck4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "Ek4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "Nkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "NkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "EyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "Ek4tPy1h4",
        "type": "MENU",
      },
      Object {
        "elements": Array [
          Object {
            "id": "aUk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "aCk4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "aEk4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "aNkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "aNkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "aEyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "aEk4tPy1h5",
        "type": "MENU",
      },
      Object {
        "elements": Array [
          Object {
            "id": "bUk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "bCk4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "bEk4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "bNkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "bNkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "bEyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "bEk4tPy1h6",
        "type": "MENU",
      },
    ]
  }
  hideButtons={false}
  onClick={[Function]}
>
  <Gallery
    elements={
      Array [
        Object {
          "elements": Array [
            Object {
              "id": "Uk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "Ck4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "Ek4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "Nkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "NkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "EyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "Ek4tPy1h4",
          "type": "MENU",
        },
        Object {
          "elements": Array [
            Object {
              "id": "aUk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "aCk4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "aEk4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "aNkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "aNkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "aEyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "aEk4tPy1h5",
          "type": "MENU",
        },
        Object {
          "elements": Array [
            Object {
              "id": "bUk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "bCk4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "bEk4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "bNkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "bNkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "bEyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "bEk4tPy1h6",
          "type": "MENU",
        },
      ]
    }
    hideButtons={false}
    onClick={[Function]}
  >
    <div>
      <div>
        <ResizeDetector
          handleHeight={false}
          handleWidth={false}
          onResize={[Function]}
          refreshRate={1000}
          resizableElementId=""
          skipOnMount={false}
        >
          <div
            style={
              Object {
                "display": "none",
                "height": 0,
                "position": "absolute",
                "visibility": "hidden",
                "width": 0,
              }
            }
          />
        </ResizeDetector>
        <div
          key="Ek4tPy1h4"
        >
          <ComposedElement
            elements={
              Array [
                Object {
                  "id": "Uk4tPy1h2",
                  "type": "IMAGE",
                  "url": "https://picsum.photos/300/150",
                },
                Object {
                  "id": "Ck4tPy1h3",
                  "text": "Hello!",
                  "type": "TITLE",
                },
                Object {
                  "id": "Ek4tPy1h1",
                  "text": "Lorem Impsum...",
                  "type": "TEXT",
                },
                Object {
                  "id": "Nkm0hRAiE",
                  "postback": "click-on-button-1",
                  "text": "Click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "NkGJ6CAiN",
                  "postback": "click-on-button-2",
                  "text": "No click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "EyCyTRCi4",
                  "postback": "click-on-button-3",
                  "text": "Aww don\`t click on me",
                  "type": "BUTTON",
                },
              ]
            }
            hideButtons={false}
            onClick={[Function]}
          >
            <div>
              <Element
                id="Uk4tPy1h2"
                key="Uk4tPy1h2"
                topLevel={true}
                type="IMAGE"
                url="https://picsum.photos/300/150"
              >
                <Image
                  src="https://picsum.photos/300/150"
                >
                  <div>
                    <div>
                      <img
                        src="https://picsum.photos/300/150"
                      />
                    </div>
                  </div>
                </Image>
              </Element>
              <Element
                id="Ck4tPy1h3"
                key="Ck4tPy1h3"
                text="Hello!"
                topLevel={true}
                type="TITLE"
              >
                <Heading
                  content="Hello!"
                  level={1}
                >
                  <h1>
                    Hello!
                  </h1>
                </Heading>
              </Element>
              <Element
                id="Ek4tPy1h1"
                key="Ek4tPy1h1"
                text="Lorem Impsum..."
                topLevel={true}
                type="TEXT"
              >
                <Text
                  content="Lorem Impsum..."
                >
                  <p>
                    Lorem Impsum...
                  </p>
                </Text>
              </Element>
              <Element
                id="Nkm0hRAiE"
                key="Nkm0hRAiE"
                postback="click-on-button-1"
                text="Click me!"
                topLevel={true}
                type="BUTTON"
              >
                <Button
                  id="Nkm0hRAiE"
                  label="Click me!"
                  postback="click-on-button-1"
                  text="Click me!"
                  topLevel={true}
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Click me!"
                    >
                      Click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                id="NkGJ6CAiN"
                key="NkGJ6CAiN"
                postback="click-on-button-2"
                text="No click me!"
                topLevel={true}
                type="BUTTON"
              >
                <Button
                  id="NkGJ6CAiN"
                  label="No click me!"
                  postback="click-on-button-2"
                  text="No click me!"
                  topLevel={true}
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="No click me!"
                    >
                      No click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                id="EyCyTRCi4"
                key="EyCyTRCi4"
                postback="click-on-button-3"
                text="Aww don\`t click on me"
                topLevel={true}
                type="BUTTON"
              >
                <Button
                  id="EyCyTRCi4"
                  label="Aww don\`t click on me"
                  postback="click-on-button-3"
                  text="Aww don\`t click on me"
                  topLevel={true}
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Aww don\`t click on me"
                    >
                      Aww don\`t click on me
                    </button>
                  </div>
                </Button>
              </Element>
            </div>
          </ComposedElement>
        </div>
        <div
          key="aEk4tPy1h5"
        >
          <ComposedElement
            elements={
              Array [
                Object {
                  "id": "aUk4tPy1h2",
                  "type": "IMAGE",
                  "url": "https://picsum.photos/300/150",
                },
                Object {
                  "id": "aCk4tPy1h3",
                  "text": "Hello!",
                  "type": "TITLE",
                },
                Object {
                  "id": "aEk4tPy1h1",
                  "text": "Lorem Impsum...",
                  "type": "TEXT",
                },
                Object {
                  "id": "aNkm0hRAiE",
                  "postback": "click-on-button-1",
                  "text": "Click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "aNkGJ6CAiN",
                  "postback": "click-on-button-2",
                  "text": "No click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "aEyCyTRCi4",
                  "postback": "click-on-button-3",
                  "text": "Aww don\`t click on me",
                  "type": "BUTTON",
                },
              ]
            }
            hideButtons={false}
            onClick={[Function]}
          >
            <div>
              <Element
                id="aUk4tPy1h2"
                key="aUk4tPy1h2"
                topLevel={true}
                type="IMAGE"
                url="https://picsum.photos/300/150"
              >
                <Image
                  src="https://picsum.photos/300/150"
                >
                  <div>
                    <div>
                      <img
                        src="https://picsum.photos/300/150"
                      />
                    </div>
                  </div>
                </Image>
              </Element>
              <Element
                id="aCk4tPy1h3"
                key="aCk4tPy1h3"
                text="Hello!"
                topLevel={true}
                type="TITLE"
              >
                <Heading
                  content="Hello!"
                  level={1}
                >
                  <h1>
                    Hello!
                  </h1>
                </Heading>
              </Element>
              <Element
                id="aEk4tPy1h1"
                key="aEk4tPy1h1"
                text="Lorem Impsum..."
                topLevel={true}
                type="TEXT"
              >
                <Text
                  content="Lorem Impsum..."
                >
                  <p>
                    Lorem Impsum...
                  </p>
                </Text>
              </Element>
              <Element
                id="aNkm0hRAiE"
                key="aNkm0hRAiE"
                postback="click-on-button-1"
                text="Click me!"
                topLevel={true}
                type="BUTTON"
              >
                <Button
                  id="aNkm0hRAiE"
                  label="Click me!"
                  postback="click-on-button-1"
                  text="Click me!"
                  topLevel={true}
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Click me!"
                    >
                      Click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                id="aNkGJ6CAiN"
                key="aNkGJ6CAiN"
                postback="click-on-button-2"
                text="No click me!"
                topLevel={true}
                type="BUTTON"
              >
                <Button
                  id="aNkGJ6CAiN"
                  label="No click me!"
                  postback="click-on-button-2"
                  text="No click me!"
                  topLevel={true}
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="No click me!"
                    >
                      No click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                id="aEyCyTRCi4"
                key="aEyCyTRCi4"
                postback="click-on-button-3"
                text="Aww don\`t click on me"
                topLevel={true}
                type="BUTTON"
              >
                <Button
                  id="aEyCyTRCi4"
                  label="Aww don\`t click on me"
                  postback="click-on-button-3"
                  text="Aww don\`t click on me"
                  topLevel={true}
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Aww don\`t click on me"
                    >
                      Aww don\`t click on me
                    </button>
                  </div>
                </Button>
              </Element>
            </div>
          </ComposedElement>
        </div>
        <div
          key="bEk4tPy1h6"
        >
          <ComposedElement
            elements={
              Array [
                Object {
                  "id": "bUk4tPy1h2",
                  "type": "IMAGE",
                  "url": "https://picsum.photos/300/150",
                },
                Object {
                  "id": "bCk4tPy1h3",
                  "text": "Hello!",
                  "type": "TITLE",
                },
                Object {
                  "id": "bEk4tPy1h1",
                  "text": "Lorem Impsum...",
                  "type": "TEXT",
                },
                Object {
                  "id": "bNkm0hRAiE",
                  "postback": "click-on-button-1",
                  "text": "Click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "bNkGJ6CAiN",
                  "postback": "click-on-button-2",
                  "text": "No click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "bEyCyTRCi4",
                  "postback": "click-on-button-3",
                  "text": "Aww don\`t click on me",
                  "type": "BUTTON",
                },
              ]
            }
            hideButtons={false}
            onClick={[Function]}
          >
            <div>
              <Element
                id="bUk4tPy1h2"
                key="bUk4tPy1h2"
                topLevel={true}
                type="IMAGE"
                url="https://picsum.photos/300/150"
              >
                <Image
                  src="https://picsum.photos/300/150"
                >
                  <div>
                    <div>
                      <img
                        src="https://picsum.photos/300/150"
                      />
                    </div>
                  </div>
                </Image>
              </Element>
              <Element
                id="bCk4tPy1h3"
                key="bCk4tPy1h3"
                text="Hello!"
                topLevel={true}
                type="TITLE"
              >
                <Heading
                  content="Hello!"
                  level={1}
                >
                  <h1>
                    Hello!
                  </h1>
                </Heading>
              </Element>
              <Element
                id="bEk4tPy1h1"
                key="bEk4tPy1h1"
                text="Lorem Impsum..."
                topLevel={true}
                type="TEXT"
              >
                <Text
                  content="Lorem Impsum..."
                >
                  <p>
                    Lorem Impsum...
                  </p>
                </Text>
              </Element>
              <Element
                id="bNkm0hRAiE"
                key="bNkm0hRAiE"
                postback="click-on-button-1"
                text="Click me!"
                topLevel={true}
                type="BUTTON"
              >
                <Button
                  id="bNkm0hRAiE"
                  label="Click me!"
                  postback="click-on-button-1"
                  text="Click me!"
                  topLevel={true}
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Click me!"
                    >
                      Click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                id="bNkGJ6CAiN"
                key="bNkGJ6CAiN"
                postback="click-on-button-2"
                text="No click me!"
                topLevel={true}
                type="BUTTON"
              >
                <Button
                  id="bNkGJ6CAiN"
                  label="No click me!"
                  postback="click-on-button-2"
                  text="No click me!"
                  topLevel={true}
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="No click me!"
                    >
                      No click me!
                    </button>
                  </div>
                </Button>
              </Element>
              <Element
                id="bEyCyTRCi4"
                key="bEyCyTRCi4"
                postback="click-on-button-3"
                text="Aww don\`t click on me"
                topLevel={true}
                type="BUTTON"
              >
                <Button
                  id="bEyCyTRCi4"
                  label="Aww don\`t click on me"
                  postback="click-on-button-3"
                  text="Aww don\`t click on me"
                  topLevel={true}
                  type="BUTTON"
                >
                  <div>
                    <button
                      onClick={[Function]}
                      title="Aww don\`t click on me"
                    >
                      Aww don\`t click on me
                    </button>
                  </div>
                </Button>
              </Element>
            </div>
          </ComposedElement>
        </div>
      </div>
    </div>
  </Gallery>
</PluginWrapper>
`;

exports[`Plugin index should render raw element inside plugin 1`] = `
<PluginWrapper
  disableCarusel={false}
  elements={
    Array [
      Object {
        "elements": Array [
          Object {
            "id": "Uk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "Ck4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "Ek4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "Nkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "NkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "EyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "Ek4tPy1h4",
        "type": "MENU",
      },
    ]
  }
  hideButtons={false}
  onClick={[Function]}
>
  <Plugin
    elements={
      Array [
        Object {
          "elements": Array [
            Object {
              "id": "Uk4tPy1h2",
              "type": "IMAGE",
              "url": "https://picsum.photos/300/150",
            },
            Object {
              "id": "Ck4tPy1h3",
              "text": "Hello!",
              "type": "TITLE",
            },
            Object {
              "id": "Ek4tPy1h1",
              "text": "Lorem Impsum...",
              "type": "TEXT",
            },
            Object {
              "id": "Nkm0hRAiE",
              "postback": "click-on-button-1",
              "text": "Click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "NkGJ6CAiN",
              "postback": "click-on-button-2",
              "text": "No click me!",
              "type": "BUTTON",
            },
            Object {
              "id": "EyCyTRCi4",
              "postback": "click-on-button-3",
              "text": "Aww don\`t click on me",
              "type": "BUTTON",
            },
          ],
          "id": "Ek4tPy1h4",
          "type": "MENU",
        },
      ]
    }
    hideButtons={false}
    onClick={[Function]}
  >
    <div>
      <div>
        <div>
          <ComposedElement
            elements={
              Array [
                Object {
                  "elements": Array [
                    Object {
                      "id": "Uk4tPy1h2",
                      "type": "IMAGE",
                      "url": "https://picsum.photos/300/150",
                    },
                    Object {
                      "id": "Ck4tPy1h3",
                      "text": "Hello!",
                      "type": "TITLE",
                    },
                    Object {
                      "id": "Ek4tPy1h1",
                      "text": "Lorem Impsum...",
                      "type": "TEXT",
                    },
                    Object {
                      "id": "Nkm0hRAiE",
                      "postback": "click-on-button-1",
                      "text": "Click me!",
                      "type": "BUTTON",
                    },
                    Object {
                      "id": "NkGJ6CAiN",
                      "postback": "click-on-button-2",
                      "text": "No click me!",
                      "type": "BUTTON",
                    },
                    Object {
                      "id": "EyCyTRCi4",
                      "postback": "click-on-button-3",
                      "text": "Aww don\`t click on me",
                      "type": "BUTTON",
                    },
                  ],
                  "id": "Ek4tPy1h4",
                  "type": "MENU",
                },
              ]
            }
            hideButtons={false}
            onClick={[Function]}
            topLevel={true}
          >
            <div>
              <Element
                elements={
                  Array [
                    Object {
                      "id": "Uk4tPy1h2",
                      "type": "IMAGE",
                      "url": "https://picsum.photos/300/150",
                    },
                    Object {
                      "id": "Ck4tPy1h3",
                      "text": "Hello!",
                      "type": "TITLE",
                    },
                    Object {
                      "id": "Ek4tPy1h1",
                      "text": "Lorem Impsum...",
                      "type": "TEXT",
                    },
                    Object {
                      "id": "Nkm0hRAiE",
                      "postback": "click-on-button-1",
                      "text": "Click me!",
                      "type": "BUTTON",
                    },
                    Object {
                      "id": "NkGJ6CAiN",
                      "postback": "click-on-button-2",
                      "text": "No click me!",
                      "type": "BUTTON",
                    },
                    Object {
                      "id": "EyCyTRCi4",
                      "postback": "click-on-button-3",
                      "text": "Aww don\`t click on me",
                      "type": "BUTTON",
                    },
                  ]
                }
                id="Ek4tPy1h4"
                key="Ek4tPy1h4"
                topLevel={true}
                type="MENU"
              >
                <ComposedElement
                  elements={
                    Array [
                      Object {
                        "id": "Uk4tPy1h2",
                        "type": "IMAGE",
                        "url": "https://picsum.photos/300/150",
                      },
                      Object {
                        "id": "Ck4tPy1h3",
                        "text": "Hello!",
                        "type": "TITLE",
                      },
                      Object {
                        "id": "Ek4tPy1h1",
                        "text": "Lorem Impsum...",
                        "type": "TEXT",
                      },
                      Object {
                        "id": "Nkm0hRAiE",
                        "postback": "click-on-button-1",
                        "text": "Click me!",
                        "type": "BUTTON",
                      },
                      Object {
                        "id": "NkGJ6CAiN",
                        "postback": "click-on-button-2",
                        "text": "No click me!",
                        "type": "BUTTON",
                      },
                      Object {
                        "id": "EyCyTRCi4",
                        "postback": "click-on-button-3",
                        "text": "Aww don\`t click on me",
                        "type": "BUTTON",
                      },
                    ]
                  }
                  id="Ek4tPy1h4"
                  showTextAsMessage={false}
                  topLevel={true}
                  type="MENU"
                >
                  <div>
                    <Element
                      id="Uk4tPy1h2"
                      key="Uk4tPy1h2"
                      topLevel={true}
                      type="IMAGE"
                      url="https://picsum.photos/300/150"
                    >
                      <Image
                        src="https://picsum.photos/300/150"
                      >
                        <div>
                          <div>
                            <img
                              src="https://picsum.photos/300/150"
                            />
                          </div>
                        </div>
                      </Image>
                    </Element>
                    <Element
                      id="Ck4tPy1h3"
                      key="Ck4tPy1h3"
                      text="Hello!"
                      topLevel={true}
                      type="TITLE"
                    >
                      <Heading
                        content="Hello!"
                        level={1}
                      >
                        <h1>
                          Hello!
                        </h1>
                      </Heading>
                    </Element>
                    <Element
                      id="Ek4tPy1h1"
                      key="Ek4tPy1h1"
                      text="Lorem Impsum..."
                      topLevel={true}
                      type="TEXT"
                    >
                      <Text
                        content="Lorem Impsum..."
                      >
                        <p>
                          Lorem Impsum...
                        </p>
                      </Text>
                    </Element>
                    <Element
                      id="Nkm0hRAiE"
                      key="Nkm0hRAiE"
                      postback="click-on-button-1"
                      text="Click me!"
                      topLevel={true}
                      type="BUTTON"
                    >
                      <Button
                        id="Nkm0hRAiE"
                        label="Click me!"
                        postback="click-on-button-1"
                        text="Click me!"
                        topLevel={true}
                        type="BUTTON"
                      >
                        <div>
                          <button
                            onClick={[Function]}
                            title="Click me!"
                          >
                            Click me!
                          </button>
                        </div>
                      </Button>
                    </Element>
                    <Element
                      id="NkGJ6CAiN"
                      key="NkGJ6CAiN"
                      postback="click-on-button-2"
                      text="No click me!"
                      topLevel={true}
                      type="BUTTON"
                    >
                      <Button
                        id="NkGJ6CAiN"
                        label="No click me!"
                        postback="click-on-button-2"
                        text="No click me!"
                        topLevel={true}
                        type="BUTTON"
                      >
                        <div>
                          <button
                            onClick={[Function]}
                            title="No click me!"
                          >
                            No click me!
                          </button>
                        </div>
                      </Button>
                    </Element>
                    <Element
                      id="EyCyTRCi4"
                      key="EyCyTRCi4"
                      postback="click-on-button-3"
                      text="Aww don\`t click on me"
                      topLevel={true}
                      type="BUTTON"
                    >
                      <Button
                        id="EyCyTRCi4"
                        label="Aww don\`t click on me"
                        postback="click-on-button-3"
                        text="Aww don\`t click on me"
                        topLevel={true}
                        type="BUTTON"
                      >
                        <div>
                          <button
                            onClick={[Function]}
                            title="Aww don\`t click on me"
                          >
                            Aww don\`t click on me
                          </button>
                        </div>
                      </Button>
                    </Element>
                  </div>
                </ComposedElement>
              </Element>
            </div>
          </ComposedElement>
        </div>
      </div>
    </div>
  </Plugin>
</PluginWrapper>
`;

exports[`Plugin index should render standalone plugin 1`] = `
<PluginWrapper
  disableCarusel={false}
  elements={
    Array [
      Object {
        "elements": Array [
          Object {
            "id": "Uk4tPy1h2",
            "type": "IMAGE",
            "url": "https://picsum.photos/300/150",
          },
          Object {
            "id": "Ck4tPy1h3",
            "text": "Hello!",
            "type": "TITLE",
          },
          Object {
            "id": "Ek4tPy1h1",
            "text": "Lorem Impsum...",
            "type": "TEXT",
          },
          Object {
            "id": "Nkm0hRAiE",
            "postback": "click-on-button-1",
            "text": "Click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "NkGJ6CAiN",
            "postback": "click-on-button-2",
            "text": "No click me!",
            "type": "BUTTON",
          },
          Object {
            "id": "EyCyTRCi4",
            "postback": "click-on-button-3",
            "text": "Aww don\`t click on me",
            "type": "BUTTON",
          },
        ],
        "id": "Ek4tPy1h4",
        "type": "QUICK_REPLIES",
      },
    ]
  }
  hideButtons={false}
  onClick={[Function]}
>
  <div>
    <ComposedElement
      elements={
        Array [
          Object {
            "elements": Array [
              Object {
                "id": "Uk4tPy1h2",
                "type": "IMAGE",
                "url": "https://picsum.photos/300/150",
              },
              Object {
                "id": "Ck4tPy1h3",
                "text": "Hello!",
                "type": "TITLE",
              },
              Object {
                "id": "Ek4tPy1h1",
                "text": "Lorem Impsum...",
                "type": "TEXT",
              },
              Object {
                "id": "Nkm0hRAiE",
                "postback": "click-on-button-1",
                "text": "Click me!",
                "type": "BUTTON",
              },
              Object {
                "id": "NkGJ6CAiN",
                "postback": "click-on-button-2",
                "text": "No click me!",
                "type": "BUTTON",
              },
              Object {
                "id": "EyCyTRCi4",
                "postback": "click-on-button-3",
                "text": "Aww don\`t click on me",
                "type": "BUTTON",
              },
            ],
            "id": "Ek4tPy1h4",
            "type": "QUICK_REPLIES",
          },
        ]
      }
      hideButtons={false}
      onClick={[Function]}
    >
      <div>
        <Element
          elements={
            Array [
              Object {
                "id": "Uk4tPy1h2",
                "type": "IMAGE",
                "url": "https://picsum.photos/300/150",
              },
              Object {
                "id": "Ck4tPy1h3",
                "text": "Hello!",
                "type": "TITLE",
              },
              Object {
                "id": "Ek4tPy1h1",
                "text": "Lorem Impsum...",
                "type": "TEXT",
              },
              Object {
                "id": "Nkm0hRAiE",
                "postback": "click-on-button-1",
                "text": "Click me!",
                "type": "BUTTON",
              },
              Object {
                "id": "NkGJ6CAiN",
                "postback": "click-on-button-2",
                "text": "No click me!",
                "type": "BUTTON",
              },
              Object {
                "id": "EyCyTRCi4",
                "postback": "click-on-button-3",
                "text": "Aww don\`t click on me",
                "type": "BUTTON",
              },
            ]
          }
          id="Ek4tPy1h4"
          key="Ek4tPy1h4"
          topLevel={true}
          type="QUICK_REPLIES"
        >
          <QuickReplies
            elements={
              Array [
                Object {
                  "id": "Uk4tPy1h2",
                  "type": "IMAGE",
                  "url": "https://picsum.photos/300/150",
                },
                Object {
                  "id": "Ck4tPy1h3",
                  "text": "Hello!",
                  "type": "TITLE",
                },
                Object {
                  "id": "Ek4tPy1h1",
                  "text": "Lorem Impsum...",
                  "type": "TEXT",
                },
                Object {
                  "id": "Nkm0hRAiE",
                  "postback": "click-on-button-1",
                  "text": "Click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "NkGJ6CAiN",
                  "postback": "click-on-button-2",
                  "text": "No click me!",
                  "type": "BUTTON",
                },
                Object {
                  "id": "EyCyTRCi4",
                  "postback": "click-on-button-3",
                  "text": "Aww don\`t click on me",
                  "type": "BUTTON",
                },
              ]
            }
            id="Ek4tPy1h4"
            topLevel={true}
            type="QUICK_REPLIES"
          >
            <div>
              <div>
                <Bubble
                  text="Lorem Impsum..."
                >
                  <div>
                    Lorem Impsum...
                  </div>
                </Bubble>
              </div>
              <div>
                <button
                  key="Nkm0hRAiE"
                  onClick={[Function]}
                  title="Click me!"
                >
                  Click me!
                </button>
                <button
                  key="NkGJ6CAiN"
                  onClick={[Function]}
                  title="No click me!"
                >
                  No click me!
                </button>
                <button
                  key="EyCyTRCi4"
                  onClick={[Function]}
                  title="Aww don\`t click on me"
                >
                  Aww don\`t click on me
                </button>
              </div>
            </div>
          </QuickReplies>
        </Element>
      </div>
    </ComposedElement>
  </div>
</PluginWrapper>
`;
